# workflows-pyproject

./: pyproject.toml
.github/workflows/: typecheck.yaml
