[tool.poetry]
name = "workflows-pyproject"
version = "0.1.0"
description = ""
authors = ["L140-beep <kartoshka0302@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
